cleanup and update dependency